commit change name

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,4 +1,4 @@
-name: flick_video_player
+name: flick_video_player_custom
 description: Flick Video Player is a video player for flutter. The video_player plugin gives low level access for the video playback.
 
 version: 0.5.0
